# glide-finetune

./: .gitignore  CLAUDE.md  CLI.md  README.md  SAMPLERS.md  benchmark_inference.py  captions_32.txt  captions_8.txt  clip_eval.py  eval_captions_persons_aesthetic.txt  evaluate_glide.py  evaluate_models.py  example_samplers.py  finetune_laionide_v3_datacomp.sh  generate_base_images.py  generate_sr_images.py  glide-finetune.py  glide_cutouts.py  gradio_app.py  inference_clip_rerank.py  loader.py  mypy.ini  prepare_reference_stats.py  pyproject.toml  pytest.ini  quick_test_samplers.py  requirements.txt  ruff.toml  run_clip_rerank_gen.sh  run_cmd.sh  run_finetune_synthetic.sh  run_train_glide.sh  run_train_glide_ema.sh  run_train_glide_ema_sr.sh  run_train_glide_sr.sh  run_training_pixelart.sh  run_training_retro_pixelart.sh  run_training_synth.sh  sample.py  test_adapter_difference.py  (+14 more)
cache/: valid_tars_1dbc05c2.json
configs/: accelerate_ddp.yaml  accelerate_ddp_fp16.yaml  accelerate_deepspeed_zero2.yaml  accelerate_deepspeed_zero3.yaml  accelerate_fsdp.yaml  clip_adapter_config.yaml  deepspeed_zero2_config.json  deepspeed_zero3_config.json
data/: eval_birds_32.txt  eval_birds_8.txt  eval_captions_blog.txt  eval_captions_generic.txt  eval_persons_32.txt  gemini-captions-1k.txt  generated-captions-1k.txt  generated-captions-32.txt
docker/: Dockerfile  entrypoint.sh
docker_entrypoint/: Dockerfile
esrgan_models/: .gitignore
examples/: conceptual_prompts_64.txt  eval_prompts_16.txt  eval_prompts_32.txt  eval_prompts_4.txt  eval_prompts_8.txt  people_captions_16.txt  trippy_prompts_16.txt  trippy_prompts_32.txt  trippy_prompts_4.txt  trippy_prompts_8.txt
glide-finetune/: fp16_util.py  glide-finetune.py  loader.py  util.py
glide-text2im/glide_text2im/: download.py  gaussian_diffusion.py  model_creation.py  respace.py  text2im_model.py  unet.py  xf.py
glide-text2im/notebooks/: text2im.ipynb
glide_finetune/: bloom_filter_utils.py  checkpoint_manager.py  checkpoint_utils.py  cli_utils.py  clip_evaluator.py  clip_loader.py  clip_rerank.py  distributed_utils.py  dynamic_loss_scaler.py  ema_util.py  enhanced_samplers.py  esrgan.py  finetune.py  fp16_training.py  fp16_util.py  freeze_utils.py  freezing_utils.py  glide-finetune.py  glide_finetune.py  glide_util.py  image_processing.py  latent_util.py  layer_utils.py  lazy_loader.py  loader.py  lora_wrapper.py  master_weight_manager.py  memory_conscious_evaluator.py  memory_manager.py  metrics.py  metrics_tracker.py  noisy_clip_finetune.py  optimizer_util.py  randomize_utils.py  stability_monitor.py  swinir_upscaler.py  text_encoder_cache.py  train_util.py  util.py  wds_loader.py  (+3 more)
glide_finetune/adapters/: __init__.py  clip_adapter.py  clip_text2im_model.py  dual_attention.py  glide_clip_integration.py
glide_finetune/samplers/: __init__.py  base.py  ddim.py  dpm.py  euler.py  euler_fixed.py  plms.py  util.py
scripts/: CLIP_TRAINING_README.md  MIGRATION_GUIDE.md  benchmark-inference-speed.sh  build_person_bloom_filter.py  build_person_bloom_filter_v1.py  finetune-glide-clip.sh  finetune-glide.sh  generate-clip-ensemble-fast.sh  generate-clip-ensemble-turbo.sh  generate-clip-ensemble.sh  generate-from-prompts.sh  generate-with-wandb.sh  precompute-clip-birds.sh  precompute-clip-cc12m.sh  precompute-clip-embeddings.sh  precompute-clip-laion-fast.sh  precompute-clip-laion-prefetch.sh  precompute-clip-laion-ultra-fast.sh  precompute-clip-laion.sh  precompute_clip_features.py  precompute_clip_text_embeddings.py  precompute_clip_webdataset_embeddings.py  precompute_clip_webdataset_embeddings_fast.py  precompute_clip_webdataset_embeddings_prefetch.py  precompute_clip_webdataset_embeddings_ultra_fast.py  run-docker.sh  run-finetune-birds-3phase.sh  run-finetune-birds.sh  run-finetune-laion-clip-3phase.sh  run-finetune-laion-clip.sh  run-finetune-laion-synthetic-clip-3phase.sh  run-finetune-laion.sh  run-finetune.sh  run_training_datacomp_clip.sh  run_training_datacomp_clip_latent.sh  sample.py  setup-compile-cache.sh  test-clip-minimal.sh  test-clip-training-quick.sh  test_multi_gpu_adapter.sh  (+1 more)
scripts/fp16/: analyze_checkpoint.py  inference_comparison.py  performance_benchmark.py  stability_test_suite.py  test_fp16_end_to_end.sh  training_monitor_dashboard.py
src/glide_finetune/: README.md  __init__.py  adapter_optimizer.py  checkpoint_manager.py  cli_args.py  clip_adapter.py  clip_compute.py  clip_evaluator.py  clip_model_wrapper.py  dynamic_loss_scaler.py  enhanced_samplers.py  fp16_training.py  fp16_util.py  glide_finetune.py  (+17 more)
tests/: __init__.py  conftest.py  test_adapter_optimizer.py  test_adapter_parity.py  test_clip_adapter.py  test_fp32_enforcement.py  test_integration_latent.py  test_latent_core.py  test_multi_gpu_adapter.py  test_openai_clip_integration.py  test_parity_with_adapter.py  test_training_regression.py  test_training_sanity.py
(+107 files in other folders)
