[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "glide-finetune"
version = "0.2.0"
description = "GLIDE text-to-image model finetuning framework with mixed precision support"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Clayton Mullis", email = "claymullis@fastmail.com" }
]
keywords = ["glide", "text2im", "diffusion", "finetuning", "deep-learning"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "accelerate>=0.25.0",
    "aiohttp>=3.8.0",
    "bitsandbytes>=0.41.0",
    "clip",
    "einops>=0.6.0",
    "ftfy>=6.1.0",
    "glide-text2im",
    "matplotlib>=3.5.0",
    "mpi4py>=3.1.0",
    "nltk>=3.9.1",
    "numpy>=1.21.0",
    "omegaconf>=2.3.0",
    "open-clip-torch>=2.20.0",
    "packaging>=21.0",
    "pillow>=9.0.0",
    "psutil>=5.9.0",
    "pybloom-live>=4.0.0",
    "pytorch-lightning>=2.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "pyyaml>=6.0",
    "regex>=2022.1.18",
    "requests>=2.28.0",
    "spacy>=3.8.7",
    "termcolor>=2.0.0",
    "timm>=0.9.0",
    "toml>=0.10.2",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "tornado>=6.2",
    "tqdm>=4.64.0",
    "transformers>=4.25.0",
    "typing-extensions>=4.4.0",
    "urllib3>=1.26.0",
    "wandb>=0.15.0",
    "webdataset>=0.2.0",
    "pandas>=2.3.2",
    "pyarrow>=21.0.0",
    "braceexpand>=0.1.7",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "mypy>=1.8.0",
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.11.0",
    "types-requests>=2.31.0",
    "types-pyyaml>=6.0.0",
    "types-toml>=0.10.0",
    "ipython>=8.0.0",
    "ipdb>=0.13.0",
]

[project.scripts]
train-glide = "glide_finetune.train:main"
sample-glide = "glide_finetune.sample:main"
eval-glide = "glide_finetune.clip_eval:main"

[tool.uv.sources]
glide-text2im = { git = "https://github.com/openai/glide-text2im.git" }
clip = { git = "https://github.com/openai/CLIP.git" }

[dependency-groups]
dev = [
    "mypy>=1.17.1",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "pytest-xdist>=3.8.0",
]
