[project]
name = "glide-finetune"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.12.15",
    "braceexpand>=0.1.7",
    "einops>=0.8.1",
    "ftfy>=6.3.1",
    "img2dataset>=1.25.4",
    "matplotlib>=3.10.5",
    "mpi4py>=4.1.0",
    "numpy>=2.3.2",
    "omegaconf>=2.3.0",
    "packaging>=25.0",
    "pillow>=11.3.0",
    "pytorch-lightning>=2.5.3",
    "pyyaml>=6.0.2",
    "regex>=2025.7.34",
    "requests>=2.32.4",
    "termcolor>=3.1.0",
    "toml>=0.10.2",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
    "tornado>=6.5.2",
    "tqdm>=4.67.1",
    "typing-extensions>=4.14.1",
    "urllib3>=2.5.0",
    "wandb>=0.21.1",
    "webdataset>=1.0.2",
]
