[project]
name = "glide-finetune"
version = "0.1.0"
description = "Fine-tune and evaluate GLIDE text-to-image diffusion models"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.12.15",
    "braceexpand>=0.1.7",
    "einops>=0.8.1",
    "ftfy>=6.3.1",
    "glide-text2im @ file:///${PROJECT_ROOT}/glide-text2im",
    "gradio>=5.0.0",
    "img2dataset>=1.25.4",
    "matplotlib>=3.10.5",
    "mpi4py>=4.1.0",
    "numpy>=2.3.2",
    "omegaconf>=2.3.0",
    "packaging>=25.0",
    "pillow>=11.3.0",
    "pytorch-lightning>=2.5.3",
    "pyyaml>=6.0.2",
    "regex>=2025.7.34",
    "requests>=2.32.4",
    "rich>=13.9.4",
    "termcolor>=3.1.0",
    "toml>=0.10.2",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
    "tornado>=6.5.2",
    "tqdm>=4.67.1",
    "typing-extensions>=4.14.1",
    "urllib3>=2.5.0",
    "wandb>=0.21.1",
    "webdataset>=1.0.2",
    "open-clip-torch>=2.20.0",
    "torchmetrics>=1.0.0",
    "torch-fidelity>=0.3.0",
    "typer>=0.17.4",
]

[project.scripts]
glide = "glide_finetune.cli:app"

[tool.setuptools]
packages = ["glide_finetune", "glide_finetune.cli"]

[dependency-groups]
dev = [
    "mypy>=1.17.1",
    "ruff>=0.12.12",
    "types-pyyaml>=6.0.12.20250822",
    "types-requests>=2.32.4.20250809",
    "types-pillow",
]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
no_implicit_optional = true
strict_optional = true
exclude = [
    "wandb/",
    "glide-cli-batch/",
    "glide-cli-test/",
    "__pycache__/",
    ".mypy_cache/",
]
